--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:postgresql://192.168.1.136:5432/reactportfolio?createDatabaseIfNotExist=true
+spring.datasource.username=micah
+spring.datasource.password=M@nyfew1
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
